--- a/etc/.tmux.conf
+++ b/etc/.tmux.conf
@@ -64,7 +64,7 @@ set -g status-interval 5
 set -g status-left "#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour238,nobold]#[fg=colour15,bg=colour238,bold] #[fg=colour238,bg=colour234,nobold]"
 set -g status-right '#[fg=colour245] %R  %d %b #[fg=colour254]#[fg=colour16,bg=colour254,bold] #h '
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg=colour39,noreverse,bold] #I  #W #[fg=colour39,bg=colour234,nobold]"
+set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg=colour39,noreverse] #I  #[bold]#W #[fg=colour39,bg=colour234,nobold]"
 
 # Activity
 setw -g monitor-activity on
