Add long gpg key ID for better security

--- a/etc/.gitconfig
+++ b/etc/.gitconfig
@@ -1,7 +1,7 @@
 [user]
 	name = Thomas Merkel
 	email = tm@core.io
-	signingkey = 0xD7A63833
+	signingkey = 0x12AE4593D7A63833
 
 [github]
 	user = drscream
